# ai-da-portal

./: AGENTS.md  README.md  opencode.json  sample_visualization_data.csv
.opencode/: package.json
portal-onl/: .env.dev  .gitignore  README.md  pyproject.toml
portal-onl/docs/: database-schema.md
portal-onl/scripts/: dev.ps1  import_data_sources.py  test.ps1
portal-onl/src/: main.py
portal-onl/src/agents/: __init__.py  agent.py  graph.py  prompt_loader.py  router.py  state.py  stream_event_handlers.py
portal-onl/src/agents/prompts/: base.md  insights.txt  orchestrator_system.j2
portal-onl/src/agents/runtimes/: __init__.py  base.py  chat.py  chat_streaming.py
portal-onl/src/api/: deps.py  router.py
portal-onl/src/core/: config.py  logging.py  paths.py  sse.py  utils.py
portal-onl/src/domain/: shared.py
portal-onl/src/features/: __init__.py
portal-onl/src/portal_onl/: __init__.py  main.py
portal-onl/src/tools/: __init__.py  anomaly_detection.py  chart_tools.py  dataframe_loader.py  dto.py  duckdb_sql.py  function_call_runtime.py  inspect_dataset_context.py  load_uploaded_dataset_file.py  registry.py  run_portal_analysis.py  update_plan.py
portal-onl/src/workers/: analysis_jobs.py  profiling_jobs.py
portal-onl/tests/: conftest.py
portal-onl/tests/agents/: test_agent.py  test_graph.py  test_router.py
portal-onl/tests/api/: test_cors.py  test_dataset_analysis_flow.py  test_health.py  test_openai_auth.py  test_sessions.py
portal-onl/tests/core/: test_config.py
portal-onl/tests/infrastructure/: test_llm_client.py  test_streaming_events.py
(+319 files in other folders)
