[project]
name = "portal-onl"
version = "0.1.0"
description = "Data analysis AI backend for the portal"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.116.0,<0.117.0",
    "uvicorn[standard]>=0.35.0,<0.36.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "python-multipart>=0.0.20,<0.0.21",
    "pandas>=2.3.0,<3.0.0",
    "numpy>=2.3.0,<3.0.0",
    "pyarrow>=21.0.0,<22.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "httpx>=0.28.0,<0.29.0",
    "sqlalchemy>=2.0.43,<3.0.0",
    "alembic>=1.16.0,<2.0.0",
    "langgraph>=0.6.0,<0.7.0",
    "orjson>=3.11.0,<4.0.0",
    "openai>=1.107.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=1.1.0,<2.0.0",
    "ruff>=0.12.0,<0.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
